--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "next": "9.5.5",
     "next-images": "^1.6.0",
     "react": "16.13.1",
